--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -240,7 +240,7 @@ Finally, we determine the efficacy of each of our bounds and data structure opti
 %
 Figure~\ref{fig:objective} highlights how a separate execution of CORELS without
 the equivalent points bound remains far from complete,
-and its lower bound far from the optimum.
+with its lower bound far from the optimum.
 %
 Table~\ref{tab:ablation} provides summary statistics for experiments using
 the full CORELS implementation and variants each remove a specific optimization.
