Refactor input structure for arxiv

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -70,6 +70,26 @@ Durham, NC\\
 
 \tableofcontents
 
-\input{content}
+\input{sections/introduction}
+
+\input{sections/related_work}
+
+\input{sections/framework}
+
+\input{sections/bounds}
+
+\input{sections/implementation}
+
+\input{sections/experiments}
+
+\input{sections/conclusion}
+
+\subsubsection*{Acknowledgments}
+
+E.A. is supported by the Miller Institute for Basic Research in Science,
+University of California, Berkeley.
+
+\bibliography{refs}
+\bibliographystyle{abbrvnat}
 
 \end{document}
