Minor ref edit so NYCLU is not abbreviated

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -863,7 +863,7 @@ institution = "University of California, Irvine, School of Information and Compu
 @misc{nyclu:2014,
 title = "Stop-and-Frisk Data",
 note = {\url{http://www.nyclu.org/content/stop-and-frisk-data}},
-author = "New York Civil Liberties Union",
+author = {{New York Civil Liberties Union}},
 year = 2014
 }
 
