--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -1,37 +1,12 @@
 \section{Experiments}
 \label{sec:experiments}
 
-\begin{arxiv}
-\begin{table}[t!]
-\centering
-\begin{tabular}{l | c | c}
-Method & ProPublica & NYCLU \\
-\hline
-CORELS & 67.6 $\pm$ 2.0 & 69.8 $\pm$ 2.7 \\
-SBRL & 67.1 $\pm$ 1.7 & 69.7 $\pm$ 2.0 \\
-CART & 66.7 $\pm$ 2.1 & 69.8 $\pm$ 2.7 \\
-C4.5 & 67.3 $\pm$ 1.8 & 66.8 $\pm$ 2.1 \\
-RF & 67.3 $\pm$ 1.8 & 68.7 $\pm$ 2.4 \\
-RIPPER & 67.3 $\pm$ 2.0 & --- \\
-AdaBoost & 67.3 $\pm$ 1.7 & 70.6 $\pm$ 2.7 \\
-GLM & 67.5 $\pm$ 1.8 & 70.3 $\pm$ 2.5 \\
-SVM & 67.1 $\pm$ 2.0 & 70.2 $\pm$ 2.7 \\
-\end{tabular}
-\vspace{5mm}
-\caption{Comparison with other methods:
-Means and standard deviations of test accuracy.
-Also report algorithm runtimes (mean $\pm$ standard deviation over 10 folds).
-CORELS ${\Reg = 0.005}$ for ProPublica and ${\Reg = 0.01}$ for NYCLU.}
-\label{tab:comparison}
-\end{table}
-\end{arxiv}
-
-%\begin{arxiv}
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 \begin{arxiv}
-\includegraphics[width=0.75\textwidth]{figs/compare-compas-weapon.pdf}
+\includegraphics[trim={10mm, 5mm, 25mm, 5mm},
+width=\textwidth]{figs/compare-compas-weapon.pdf}
 \end{arxiv}
 \begin{kdd}
 % left lower right upper
@@ -45,20 +20,21 @@ and values (colors correspond to folds).
 }
 \label{fig:comparison}
 \end{figure}
-%\end{arxiv}
 
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 \begin{arxiv}
-\includegraphics[width=0.75\textwidth]{figs/compas-sparsity-training.pdf}
+\includegraphics[trim={12mm, 0mm, 24mm, 5mm},
+width=0.75\textwidth]{figs/compas-sparsity-training.pdf}
 \end{arxiv}
 \begin{kdd}
 % left lower right upper
 \includegraphics[trim={12mm, 0mm, 24mm, 5mm}, width=0.43\textwidth]{figs/compas-sparsity-training.pdf}
 \end{kdd}
 \begin{arxiv}
-\includegraphics[width=0.5\textwidth]{figs/frisk-sparsity-training.pdf}
+\includegraphics[trim={12mm, 5mm, 24mm, 1mm},
+width=0.75\textwidth]{figs/frisk-sparsity-training.pdf}
 \end{arxiv}
 \begin{kdd}
 % left lower right upper
@@ -144,7 +120,8 @@ For both problems, CORELS can learn short rule lists without sacrificing accurac
 \begin{center}
 %\includegraphics[width=0.65\textwidth]{figs/sketch-objective.png}
 \begin{arxiv}
-\includegraphics[width=0.8\textwidth]{figs/compas_execution-remaining-space.pdf}
+\includegraphics[trim={20mm, 15mm, 24mm, 15mm},
+width=0.75\textwidth]{figs/compas_execution-remaining-space.pdf}
 \end{arxiv}
 \begin{kdd}
 % left lower right upper
@@ -182,9 +159,50 @@ is the upper bound on remaining search space size
 \label{fig:objective}
 \end{figure}
 
+%\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
+\begin{arxiv}
+\begin{table}[t!]
+\begin{tabular}{l | c | c | c | c | c}
+Removed component & $t_\text{total}$ (min) & $t_\text{opt}$ (s) & $i_\text{total}$ ($\times 10^6$) & $Q_\text{max}$ ($\times 10^6$) & $K_\text{max}$ \\
+\hline
+none (CORELS) & 5.5 (1.6) & 8 (2) & 1.7 (0.4) & 1.3 (0.4) & 5-6 \\
+priority queue (BFS) & 6.7 (2.2) & 4 (1) & 1.9 (0.6) & 1.5 (0.5) & 5-6 \\
+support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
+symmetry-aware map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
+lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
+%equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
+equivalent pts bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
+\end{tabular}
+\vspace{4mm}
+\caption{Per-component performance improvement.
+%
+The columns report total execution time,
+time to optimum, number of queue insertions,
+maximum queue size, and maximum evaluated prefix length.
+%
+The first row shows CORELS; subsequent rows show variants
+that each remove a specific implementation optimization or bound.
+%
+(We are not measuring the cumulative effects of removing a sequence of components.)
+%
+All rows represent complete executions, except for the final row,
+in which each execution was terminated due to memory constraints,
+once the size of the cache reached ${8 \times 10^8}$ elements,
+after consuming 390-410GB RAM.
+We terminated each experiment in the last row after consuming 390-410GB RAM.
+%
+In all but the final row and column, we report means
+(and standard deviations) over 10 cross-validation folds;
+in the final row, we report the minimum values across folds. \\
+%
+*~Only 4 out of 10 folds achieve the optimum before being terminated.
+}
+\label{tab:ablation}
+\end{table}
+\end{arxiv}
+\begin{kdd}
 \begin{table}[t!]
 \centering
-%\small
 \resizebox{0.49\textwidth}{!}{
 \begin{tabular}{l | c | c | c | c | c}
 Removed & $t_\text{total}$ & $t_\text{opt}$ & $i_\text{total}$ & $Q_\text{max}$ & $K_\text{max}$ \\
@@ -209,23 +227,16 @@ maximum queue size, and maximum evaluated prefix length.
 The first row shows CORELS; subsequent rows show variants
 that each remove a specific implementation optimization or bound.
 %
-%(We are not measuring the cumulative effects of removing a sequence of components.)
-%
-%All rows represent complete executions, except for the final row,
-%in which each execution was terminated %due to memory constraints,
-%once the size of the cache reached ${8 \times 10^8}$ elements,
-%after consuming 390-410GB RAM.
 We terminated each experiment in the last row after consuming 390-410GB RAM.
 %
 In all but the final row and column, we report means
 (and standard deviations) over 10 cross-validation folds;
-in the final row, we report the minimum values across folds. %\\
-%
-%*~Only 4 out of 10 folds achieve the optimum.
+in the final row, we report the minimum values across folds.
 }
 \label{tab:ablation}
 \vspace{-8mm}
 \end{table}
+\end{kdd}
 
 In the remainder, we show results using the ProPublica dataset.
 %
@@ -249,23 +260,17 @@ Figure~\ref{fig:queue} presents a view of the same experiments, focusing
 on three of our optimizations. These plots depict the number of
 prefixes of a given length in the queue during the algorithm's execution.
 
+\begin{arxiv}
 \begin{figure}[t!]
 \begin{center}
-\begin{arxiv}
-%\includegraphics[width=0.8\textwidth]{figs/ela_compas-queue.pdf}
-\includegraphics[width=\textwidth]{figs/ela_compas_ablation-queue.pdf}
-\end{arxiv}
-\begin{kdd}
-%\includegraphics[width=0.5\textwidth]{figs/ela_compas-queue.pdf}
-% left lower right upper
-\includegraphics[trim={30mm 15mm 35mm 30mm}, width=0.45\textwidth]{figs/kdd_compas_ablation_small-queue.pdf}
-\end{kdd}
+\includegraphics[trim={30mm 10mm 35mm 30mm},
+width=\textwidth]{../figs/kdd_compas_ablation-queue.pdf}
 \end{center}
-\caption{Queue composition. % logical queue
+\caption{Logical queue composition.
 %
 Numbers of prefixes in the queue (log scale), labeled and colored by length,
 as a function of wall clock time (log scale), for CORELS (top left),
-and without three specific implementation optimizations or bounds.
+and without five specific implementation optimizations or bounds.
 %the permutation bounds (top right),
 %lookahead bound (bottom left), and equivalent points bound (bottom right).
 %
@@ -278,43 +283,63 @@ in the other three subfigures.
 }
 \label{fig:queue}
 \end{figure}
-
-\begin{arxiv}
+\end{arxiv}
+\begin{kdd}
 \begin{figure}[t!]
 \begin{center}
+% left lower right upper
+\includegraphics[trim={30mm 15mm 35mm 30mm},
+width=0.45\textwidth]{figs/kdd_compas_ablation_small-queue.pdf}
 \end{center}
-\caption{Missing:  Test error as a function of regularization and sparsity
-(number of rules) as a function of regularization, over 10 folds,
-for one big dataset.}
-\label{fig:regularization}
+\caption{Queue composition.
+%
+Numbers of prefixes in the queue (log scale), labeled and colored by length,
+as a function of wall clock time (log scale), for CORELS (top left),
+and without three specific implementation optimizations or bounds.
+%
+The gray shading fills in the area beneath the total number of
+queue elements for CORELS.
+\ie the sum over all lengths in the top left figure.
+%
+For comparison, we replicate the same gray region
+in the other three subfigures.
+}
+\label{fig:queue}
 \end{figure}
-\end{arxiv}
+\end{kdd}
 
-\begin{arxiv}
-\begin{figure}[t!]
-\begin{center}
-\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
-\end{center}
-\caption{Ablation experiment:
-Show the effect of each ``piece'' at a time,
-run X without each in turn and show the difference in either
-quality of solution or runtime or amount of memory, size of cache or queue,
-where X is a specific implementation
-(meaning a specific scheduling policy and node type)}
-\label{fig:ablation}
-\end{figure}
-\end{arxiv}
+\begin{comment}
 
-\begin{arxiv}
+\begin{table}[t!]
+\centering
+\begin{tabular}{l | c | c}
+Method & ProPublica & NYCLU \\
+\hline
+CORELS & 67.6 $\pm$ 2.0 & 69.8 $\pm$ 2.7 \\
+SBRL & 67.1 $\pm$ 1.7 & 69.7 $\pm$ 2.0 \\
+CART & 66.7 $\pm$ 2.1 & 69.8 $\pm$ 2.7 \\
+C4.5 & 67.3 $\pm$ 1.8 & 66.8 $\pm$ 2.1 \\
+RF & 67.3 $\pm$ 1.8 & 68.7 $\pm$ 2.4 \\
+RIPPER & 67.3 $\pm$ 2.0 & --- \\
+AdaBoost & 67.3 $\pm$ 1.7 & 70.6 $\pm$ 2.7 \\
+GLM & 67.5 $\pm$ 1.8 & 70.3 $\pm$ 2.5 \\
+SVM & 67.1 $\pm$ 2.0 & 70.2 $\pm$ 2.7 \\
+\end{tabular}
+\vspace{5mm}
+\caption{Comparison with other methods:
+Means and standard deviations of test accuracy.
+Also report algorithm runtimes (mean $\pm$ standard deviation over 10 folds).
+CORELS ${\Reg = 0.005}$ for ProPublica and ${\Reg = 0.01}$ for NYCLU.}
+\label{tab:comparison}
+\end{table}
+
 \begin{figure}[t!]
 \begin{center}
 \end{center}
 \caption{Missing:  Some sort of comparison of different scheduling policies}
 \label{fig:scheduling-policy}
 \end{figure}
-\end{arxiv}
 
-\begin{arxiv}
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.65\textwidth]{figs/sketch-queue-size.png}
@@ -341,33 +366,7 @@ as a function of wall clock time.
 }
 \label{fig:queue-cache-size-insertions}
 \end{figure}
-\end{arxiv}
 
-%\begin{figure}[t!]
-%\begin{center}
-%%\includegraphics[width=0.65\textwidth]{figs/sketch-search-space.png}
-%\begin{arxiv}
-%\includegraphics[width=0.8\textwidth]{figs/ela_compas-remaining-space.pdf}
-%\end{arxiv}
-%\begin{kdd}
-%\includegraphics[width=0.5\textwidth]{figs/ela_compas-remaining-space.pdf}
-%\end{kdd}
-%\end{center}
-%\caption{The logarithm (base 10) of the upper bound
-%from Proposition~\ref{prop:remaining-eval-coarse}
-%on the size of the remaining search space,
-%as a function of wall clock time.
-%%
-%This bound depends on the total number of available rules,
-%as well as two dynamic quantities:
-%the current best objective value,
-%and the histogram of logical queue elements,
-%partitioned by prefix length.
-%}
-%\label{fig:search-space}
-%\end{figure}
-
-\begin{arxiv}
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.65\textwidth]{figs/sketch-max-length.png}
@@ -384,4 +383,4 @@ as a function of wall clock time.
 \caption{Best prefix length over time}
 \label{fig:prefix-length}
 \end{figure}
-\end{arxiv}
+\end{comment}
