fixed ablation queue figure

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -264,7 +264,7 @@ prefixes of a given length in the queue during the algorithm's execution.
 \begin{figure}[t!]
 \begin{center}
 \includegraphics[trim={30mm 10mm 35mm 30mm},
-width=\textwidth]{../figs/kdd_compas_ablation-queue.pdf}
+width=\textwidth]{figs/kdd_compas_ablation-queue.pdf}
 \end{center}
 \caption{Logical queue composition.
 %
