Add Cynthia's ref for unpublished work with some similar theorems

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1,3 +1,10 @@
+@unpublished{RudinEr15,
+author={Cynthia Rudin and Seyda Ertekin},
+title={Learning Optimized Lists of Rules with Mathematical Programming},
+year={2015},
+note={Unpublished}
+}
+
 @unpublished{ChenRu17,
 __author={Chaofan Chen and Cynthia Rudin},
 author={C. Chen and C. Rudin},
