Fix broken ref in arxiv version

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -845,7 +845,7 @@ therefore~$\Prefix''$ cannot be optimal,
 Similar to Theorem~\ref{thm:min-capture}, our lower bound on
 antecedent support, we can apply Theorem~\ref{thm:ub-support}
 in the contexts of both constructing rule lists and
-rule mining~(\S\ref{sec:rule-mining}).
+rule mining~(\S\ref{sec:setup}).
 %
 Theorem~\ref{thm:ub-support} implies that if we only seek a single
 optimal rule list, then during branch-and-bound execution,
