--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -2096,7 +2096,7 @@ $\Loss_0(\Prefix, \Default, \x, \y)$ on the default rule misclassification error
 Let~$\RL$ be a rule list with prefix~$\Prefix$
 and lower bound ${b(\Prefix, \x, \y)}$,
 then for any rule list~${\RL' \in \StartsWith(\RL)}$
-whose prefix~$\Prefix$ starts with~$\Prefix$,
+whose prefix~$\Prefix'$ starts with~$\Prefix$,
 \begin{arxiv}
 \begin{align}
 \Obj(\RL', \x, \y) \ge b(\Prefix, \x, \y) + b_0(\Prefix, \x, \y),
