--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -14,7 +14,7 @@ width=\textwidth]{figs/compare-compas-weapon.pdf}
 width=0.48\textwidth]{figs/compare-compas-weapon.pdf}
 \end{kdd}
 \end{center}
-\caption{Test accuracy means (white squares)
+\caption{Test accuracy means (white squares),
 standard deviations (error bars),
 and values (colors correspond to folds).
 }
