Rename global equiv pts bound to general equiv pts bound

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -2060,11 +2060,11 @@ yields a tighter objective lower bound that we can combine with our other bounds
 as our experiments demonstrate~(\S\ref{sec:experiments}),
 the practical consequences can be dramatic.
 %
-First, for intuition, we present a global bound in
+First, for intuition, we present a general bound in
 Proposition~\ref{prop:identical}; next, we explicitly integrate
 this bound into our framework in Theorem~\ref{thm:identical}.
 
-\begin{proposition}[Global equivalent points bound]
+\begin{proposition}[General equivalent points bound]
 \label{prop:identical}
 Let ${\RL = (\Prefix, \Labels, \Default, K)}$ be a rule list, then
 \begin{arxiv}
