Refactor experiments section into 2 files for long and short

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -80,7 +80,7 @@ Durham, NC\\
 
 \input{sections/implementation}
 
-\input{sections/experiments}
+\input{sections/experiments-long}
 
 \input{sections/conclusion}
 
