--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -3,9 +3,9 @@
 
 \begin{figure}[t!]
 \begin{center}
-% left lower right upper
-\includegraphics[trim={10mm, 11mm, 25mm, 5mm},
-width=0.48\textwidth]{figs/compare-compas-weapon.pdf}
+%\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
+\includegraphics[trim={10mm, 5mm, 25mm, 5mm},
+width=\textwidth]{figs/compare-compas-weapon.pdf}
 \end{center}
 \caption{Test accuracy means (white squares),
 standard deviations (error bars),
@@ -16,9 +16,11 @@ and values (colors correspond to folds).
 
 \begin{figure}[t!]
 \begin{center}
-% left lower right upper
-\includegraphics[trim={12mm, 0mm, 24mm, 5mm}, width=0.43\textwidth]{figs/compas-sparsity-training.pdf}
-\includegraphics[trim={12mm, 12mm, 24mm, 1mm}, width=0.43\textwidth]{figs/frisk-sparsity-training.pdf}
+%\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
+\includegraphics[trim={12mm, 0mm, 24mm, 5mm},
+width=0.75\textwidth]{figs/compas-sparsity-training.pdf}
+\includegraphics[trim={12mm, 5mm, 24mm, 1mm},
+width=0.75\textwidth]{figs/frisk-sparsity-training.pdf}
 \end{center}
 \caption{Training and test accuracy as a function of model size.
 %
@@ -97,8 +99,9 @@ For both problems, CORELS can learn short rule lists without sacrificing accurac
 
 \begin{figure}[t!]
 \begin{center}
-% left lower right upper
-\includegraphics[trim={20mm, 25mm, 24mm, 15mm}, width=0.45\textwidth]{figs/compas_execution-remaining-space.pdf}
+%\includegraphics[width=0.65\textwidth]{figs/sketch-objective.png}
+\includegraphics[trim={20mm, 15mm, 24mm, 15mm},
+width=0.75\textwidth]{figs/compas_execution-remaining-space.pdf}
 \end{center}
 \caption{CORELS with (lines) and without
 (dashes) the equivalent points bound (Theorem~\ref{thm:identical}).
@@ -131,12 +134,10 @@ is the upper bound on remaining search space size
 \label{fig:objective}
 \end{figure}
 
+%\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
 \begin{table}[t!]
-\centering
-\resizebox{0.49\textwidth}{!}{
 \begin{tabular}{l | c | c | c | c | c}
-Removed & $t_\text{total}$ & $t_\text{opt}$ & $i_\text{total}$ & $Q_\text{max}$ & $K_\text{max}$ \\
-component & (min) & (s) & ($\times 10^6$) & ($\times 10^6$) & \\
+Removed component & $t_\text{total}$ (min) & $t_\text{opt}$ (s) & $i_\text{total}$ ($\times 10^6$) & $Q_\text{max}$ ($\times 10^6$) & $K_\text{max}$ \\
 \hline
 none (CORELS) & 5.5 (1.6) & 8 (2) & 1.7 (0.4) & 1.3 (0.4) & 5-6 \\
 priority queue (BFS) & 6.7 (2.2) & 4 (1) & 1.9 (0.6) & 1.5 (0.5) & 5-6 \\
@@ -144,9 +145,8 @@ support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
 symmetry-aware map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
 lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
 %equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
-equivalent pts bound & $>$134 & $>$7168 & $>$800 & $>$789 & $\ge$10
+equivalent pts bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
 \end{tabular}
-}
 \vspace{4mm}
 \caption{Per-component performance improvement.
 %
@@ -157,14 +157,21 @@ maximum queue size, and maximum evaluated prefix length.
 The first row shows CORELS; subsequent rows show variants
 that each remove a specific implementation optimization or bound.
 %
+(We are not measuring the cumulative effects of removing a sequence of components.)
+%
+All rows represent complete executions, except for the final row,
+in which each execution was terminated due to memory constraints,
+once the size of the cache reached ${8 \times 10^8}$ elements,
+after consuming 390-410GB RAM.
 We terminated each experiment in the last row after consuming 390-410GB RAM.
 %
 In all but the final row and column, we report means
 (and standard deviations) over 10 cross-validation folds;
-in the final row, we report the minimum values across folds.
+in the final row, we report the minimum values across folds. \\
+%
+*~Only 4 out of 10 folds achieve the optimum before being terminated.
 }
 \label{tab:ablation}
-\vspace{-8mm}
 \end{table}
 
 In the remainder, we show results using the ProPublica dataset.
@@ -191,15 +198,16 @@ prefixes of a given length in the queue during the algorithm's execution.
 
 \begin{figure}[t!]
 \begin{center}
-% left lower right upper
-\includegraphics[trim={30mm 15mm 35mm 30mm},
-width=0.45\textwidth]{figs/kdd_compas_ablation_small-queue.pdf}
+\includegraphics[trim={30mm 10mm 35mm 30mm},
+width=\textwidth]{figs/kdd_compas_ablation-queue.pdf}
 \end{center}
-\caption{Queue composition.
+\caption{Logical queue composition.
 %
 Numbers of prefixes in the queue (log scale), labeled and colored by length,
 as a function of wall clock time (log scale), for CORELS (top left),
-and without three specific implementation optimizations or bounds.
+and without five specific implementation optimizations or bounds.
+%the permutation bounds (top right),
+%lookahead bound (bottom left), and equivalent points bound (bottom right).
 %
 The gray shading fills in the area beneath the total number of
 queue elements for CORELS.
@@ -210,3 +218,80 @@ in the other three subfigures.
 }
 \label{fig:queue}
 \end{figure}
+
+\begin{comment}
+
+\begin{table}[t!]
+\centering
+\begin{tabular}{l | c | c}
+Method & ProPublica & NYCLU \\
+\hline
+CORELS & 67.6 $\pm$ 2.0 & 69.8 $\pm$ 2.7 \\
+SBRL & 67.1 $\pm$ 1.7 & 69.7 $\pm$ 2.0 \\
+CART & 66.7 $\pm$ 2.1 & 69.8 $\pm$ 2.7 \\
+C4.5 & 67.3 $\pm$ 1.8 & 66.8 $\pm$ 2.1 \\
+RF & 67.3 $\pm$ 1.8 & 68.7 $\pm$ 2.4 \\
+RIPPER & 67.3 $\pm$ 2.0 & --- \\
+AdaBoost & 67.3 $\pm$ 1.7 & 70.6 $\pm$ 2.7 \\
+GLM & 67.5 $\pm$ 1.8 & 70.3 $\pm$ 2.5 \\
+SVM & 67.1 $\pm$ 2.0 & 70.2 $\pm$ 2.7 \\
+\end{tabular}
+\vspace{5mm}
+\caption{Comparison with other methods:
+Means and standard deviations of test accuracy.
+Also report algorithm runtimes (mean $\pm$ standard deviation over 10 folds).
+CORELS ${\Reg = 0.005}$ for ProPublica and ${\Reg = 0.01}$ for NYCLU.}
+\label{tab:comparison}
+\end{table}
+
+\begin{figure}[t!]
+\begin{center}
+\end{center}
+\caption{Missing:  Some sort of comparison of different scheduling policies}
+\label{fig:scheduling-policy}
+\end{figure}
+
+\begin{figure}[t!]
+\begin{center}
+%\includegraphics[width=0.65\textwidth]{figs/sketch-queue-size.png}
+\includegraphics[width=0.8\textwidth]{figs/ela_compas-queue-cache-size-insertions.pdf}
+\end{center}
+\caption{Cache and queue data structure sizes and insertions.
+%
+The top plot shows the sizes of the cache and queue data structures,
+as a function of wall clock time.
+%
+The number of nodes in the cache (solid black line) is an
+upper bound on the number of elements in the physical queue
+(dotted gray line), since the physical queue elements only
+correspond to the cache trie data structure's leaf nodes
+plus disconnected cache nodes that have been marked for deletion.
+%
+The queue's physical size is an upper bound on its
+logical size (solid blue line), which doesn't include nodes
+that have been marked for deletion.
+%
+The bottom plot shows the cumulative number of cache insertions,
+which is equivalent to the cumulative number of queue insertions,
+as a function of wall clock time.
+}
+\label{fig:queue-cache-size-insertions}
+\end{figure}
+
+\begin{figure}[t!]
+\begin{center}
+%\includegraphics[width=0.65\textwidth]{figs/sketch-max-length.png}
+\includegraphics[width=0.8\textwidth]{figs/ela-max-length-check.png}
+\end{center}
+\caption{Max prefix length over time (computed from objective value)}
+\label{fig:max-length}
+\end{figure}
+
+\begin{figure}[t!]
+\begin{center}
+\includegraphics[width=0.8\textwidth]{figs/ela_compas-prefix-length.pdf}
+\end{center}
+\caption{Best prefix length over time}
+\label{fig:prefix-length}
+\end{figure}
+\end{comment}
