Trivial edit in bib file

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -553,7 +553,7 @@ year={2012}
 @inproceedings{Giraud98,
 __author={Christophe Giraud-Carrier},
 author={C. Giraud-Carrier},
-title={Beyond predictive accuracy: what?}, 
+title={Beyond predictive accuracy: {W}hat?},
 booktitle={Proceedings of the ECML-98 Workshop on Upgrading Learning to Meta-Level: Model Selection and Data Transformation}, 
 pages={78--85}, 
 year={1998}
