--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -87,7 +87,8 @@ Durham, NC\\
 \subsubsection*{Acknowledgments}
 
 E.A. is supported by the Miller Institute for Basic Research in Science,
-University of California, Berkeley.
+University of California, Berkeley, and is hosted by Prof. Michael I. Jordan
+at RISELab.
 
 \bibliography{refs}
 \bibliographystyle{abbrvnat}
