--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -87,7 +87,7 @@ Durham, NC\\
 \subsubsection*{Acknowledgments}
 
 E.A. is supported by the Miller Institute for Basic Research in Science,
-University of California, Berkeley, and is hosted by Prof. Michael I. Jordan
+University of California, Berkeley, and is hosted by Prof. M.I. Jordan
 at RISELab.
 
 \bibliography{refs}
