--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -2200,29 +2200,60 @@ applying~\eqref{eq:lb-equiv-pts-uncap} gives a lower bound on~$\Obj(\RL, \x, \y)
 = \Loss_p(\Prefix, \Labels, \x, \y) + \Loss_0(\Prefix, \Default, \x, \y) + \Reg K
 &= b(\Prefix, \x, \y) + \Loss_0(\Prefix, \Default, \x, \y) \nn \\
 &\ge b(\Prefix, \x, \y) + b_0(\Prefix, \x, \y).
+\label{eq:equiv-pts-base}
 \end{align}
-Analogously, for any rule list~$\RL'$ whose prefix~$\Prefix'$ starts with~$\Prefix$,
-$\Obj(\RL, \x, \y) \ge b(\Prefix, \x, \y) + b_0(\Prefix, \x, \y)$.
+It follows that for any rule list~${\RL' \in \StartsWith(\RL)}$ whose prefix~$\Prefix'$
+starts with~$\Prefix$, we have
+\begin{align}
+\Obj(\RL', \x, \y) \ge b(\Prefix', \x, \y) + b_0(\Prefix', \x, \y).
+\label{eq:equiv-pts-extend}
+\end{align}
+
+Finally, we show that the lower bound
+on~${\Obj(\RL, \x, \y)}$ in~\eqref{eq:equiv-pts-base} is not greater than
+the lower bound on~${\Obj(\RL', \x, \y)}$ in~\eqref{eq:equiv-pts-extend}.
+%
+First, let us define
+\begin{align}
+\Upsilon(\Prefix', K, \x, \y) \equiv \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
+    \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ].
+\end{align}
+Now, we write a lower bound on~${b(\Prefix', \x, \y)}$ with respect to~${b(\Prefix, \x, \y)}$:
 \begin{align}
 b(\Prefix', \x, \y) &= \Loss_p(\Prefix', \Labels, \x, \y) + \Reg K'
 = \frac{1}{N} \sum_{n=1}^N \sum_{k=1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ q_k \neq y_n ] + \Reg K' \nn \\
 &= \Loss_p(\Prefix, \Labels, \x, \y) + \Reg K + \frac{1}{N} \sum_{n=1}^N \sum_{k=K}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ q_k \neq y_n ] + \Reg (K' - K) \nn \\
-&= b(\Prefix, \x, \y) + \frac{1}{N} \sum_{n=1}^N \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ q_k \neq y_n ] + \Reg (K' - K)
+&= b(\Prefix, \x, \y) + \frac{1}{N} \sum_{n=1}^N \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ q_k \neq y_n ] + \Reg (K' - K) \nn \\
+&= b(\Prefix, \x, \y) + \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix')
+  \wedge \one [ q_k \neq y_n ] \wedge \one [ x_n \in e_u ] + \Reg (K' - K) \nn \\
+&\ge b(\Prefix, \x, \y) + \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix')
+  \wedge \one [ y_n = q_u ] \wedge \one [ x_n \in e_u ] + \Reg (K' - K) \nn \\
+&= b(\Prefix, \x, \y) + \Upsilon(\Prefix', K, \x, \y) + \Reg (K' - K).
+\label{eq:equiv-pts-b}
 \end{align}
+Next, we write ${b_0(\Prefix, \x, \y)}$ with respect to~${b_0(\Prefix', \x, \y)}$,
 \begin{align}
 b_0(\Prefix, \x, \y) &= \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
     \neg\, \Cap(x_n, \Prefix) \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ] \nn \\
 &= \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
-    \left(\neg\, \Cap(x_n, \Prefix')+ \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \right) \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ] \nn \\
+    \left(\neg\, \Cap(x_n, \Prefix')+ \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \right)
+    \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ] \nn \\
 &= b_0(\Prefix', \x, \y) + \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
-    \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ]
+    \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ],
 \end{align}
-Combining gives
+thus rearranging gives
+\begin{align}
+b_0(\Prefix', \x, \y) &= b_0(\Prefix, \x, y) - \Upsilon(\Prefix', K, \x, \y).
+\label{eq:equiv-pts-b0}
+\end{align}
+Combining~\eqref{eq:equiv-pts-extend} with first~\eqref{eq:equiv-pts-b0}
+and then~\eqref{eq:equiv-pts-b} gives:
 \begin{align}
 \Obj(\RL', \x, \y) &\ge b(\Prefix', \x, \y) + b_0(\Prefix', \x, \y) \nn \\
-&= b(\Prefix, \x, \y) + \frac{1}{N} \sum_{n=1}^N \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ q_k \neq y_n ] + \Reg (K' - K) + b_0(\Prefix', \x, \y) \nn \\
-&\dots \nn \\
-&\ge b(\Prefix, \x, \y) + b_0(\Prefix, \x, \y).
+&= b(\Prefix', \x, \y) + b_0(\Prefix, \x, y) - \Upsilon(\Prefix', K, \x, \y) \nn \\
+&\ge b(\Prefix, \x, \y) + \Upsilon(\Prefix', K, \x, \y) + \Reg (K' - K) + b_0(\Prefix, \x, y) - \Upsilon(\Prefix', K, \x, \y) \nn \\
+&= b(\Prefix, \x, \y) + b_0(\Prefix, \x, y) + \Reg (K' - K)
+\ge b(\Prefix, \x, \y) + b_0(\Prefix, \x, \y).
 \end{align}
 \end{proof}
 \end{arxiv}
